--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="icon" href="icon.png">
-<title>WhatsupChat App</title>	
-</head>
-<body>
 
-<h1>Chat App</h1>
-
-<div id="messages"></div>	
+<title>Join Page - WhatsupChat App</title>	
+<link rel="icon" href="./img/favicon.png">
+<link rel="stylesheet" href="./css/styles.min.css">
 	
-
-<form id="message-form">
-<input placeholder="message" value="Message">
-<button>Send</button>
-</form>
-<button id="shareLocation">Share My Location</button>
-
-<script id="message-template" type="text/html">
-	
-<div>
-	<p> This is test </p>
-</div>
-
-</script>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
+		
+</head>
+<body>
+
+<div class="centered-form">
+<div class="centered-form__box">
+<h1>Join Our Chat App</h1>
+<form action="./chat.html">
+
+Display name: <input type="text" name="username" placeholder="Your Account Name" value="John Doe" required>
+Chat Space: <input type="text" name="space" placeholder="Chat Space" required>
+<button>Join</button>
 	
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/chat.js"></script>
+</form>
+	
+</div>	
+	
+</div>
 
 </body>	
 </html>
