--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 
-<title>Join Page - WhatsupChat App</title>	
+<title>Join Page - Howdy Chat App</title>	
 <link rel="icon" href="./img/favicon.png">
-<link rel="stylesheet" href="./css/styles.min.css">
+<link rel="stylesheet" href="./css/styles.css">
 	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
@@ -16,9 +16,10 @@
 <div class="centered-form">
 <div class="centered-form__box">
 <h1>Join Our Chat App</h1>
-<form action="./chat.html">
+	
+<form id="joinForm" action="./chat.html">
 
-Display name: <input type="text" name="username" placeholder="Your Account Name" value="John Doe" required>
+Display name: <input type="text" name="username" placeholder="i.e.: John Doe" required>
 Chat Space: <input type="text" name="space" placeholder="Chat Space" required>
 <button>Join</button>
 	
@@ -29,4 +30,5 @@ Chat Space: <input type="text" name="space" placeholder="Chat Space" required>
 </div>
 
 </body>	
+
 </html>
