--- a/public/chat.html
+++ b/public/chat.html
@@ -4,7 +4,7 @@
 
 <title>Howdy Chat App</title>	
 <link rel="icon" href="./img/favicon.png">
-<link rel="stylesheet" href="./css/styles.css">
+<link rel="stylesheet" href="./css/styles.min.css">
 	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
